Address landscape bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,7 @@
     transition-duration: 1s !important;
 }
 
+
 /* up to xxl included */
 @media screen and (max-width: 1400px) {
     /* Profile Section Styles */
@@ -312,12 +313,20 @@
     }
 }
 
+/* For landscape mode on phones */
+/* up to md included width, up to xs included height */
+@media (max-width: 991px) and (max-height: 575px) and (orientation: landscape) {
+    #profile {
+        min-height: 150vh;
+}
+
 /* up to sm included */
 @media screen and (max-width: 767px) {
     .staggerAbout:nth-child(2) {
         transition-delay: 0s;
     }
 }
+
 /* up to xs included */
 @media screen and (max-width: 575px) {
     /* Button Container Styles */
